@@ -1,3 +1,6 @@
+### NOTE: This file is deprecated.  It has moved to
+###   https://github.com/plume-lib/html-tools
+
 The "html-update" package contains three small scripts that you may find
 helpful for automatically updating your webpages.
 
