@@ -142,6 +142,9 @@ webpage that you maintain.
     <a href="https://raw.githubusercontent.com/mernst/plume-lib/master/bin/html-update-link-dates">Documentation</a> at top of file.
   </li>
 </ul>
+<p>
+Do not use the scripts from here; use the versions in
+<a href="https://github.com/plume-lib/html-tools">https://github.com/plume-lib/html-tools</a>.
 </dd>
 
 
@@ -173,10 +176,13 @@ webpage that you maintain.
 <dt>html-canonical-urls</dt>
 <dd>
   This file maps a textual string (such as the name of a person,
-  institution, er event) to the a canonical URL for that string.
+  institution, er event) to the canonical URL for that string.
   It is used by the
   <a href="http://homes.cs.washington.edu/~mernst/software/bibtex2web.html">bibtex2web</a>
   program.
+  <p>
+  Do not use this file; use the version in
+  <a href="https://github.com/plume-lib/html-tools">https://github.com/plume-lib/html-tools</a>.
 </dd>
 
 
@@ -207,6 +213,9 @@ webpage that you maintain.
   favicon is a favorites icon, which is intended to appear in the address
   bar of your browser when you browse to the given page.
   <a href="https://raw.githubusercontent.com/mernst/plume-lib/master/bin/html-add-favicon">Documentation</a> at top of file.
+  <p>
+  Do not use the script from here; use the version in
+  <a href="https://github.com/plume-lib/html-tools">https://github.com/plume-lib/html-tools</a>.
 </dd>
 
 <dt>add-favicon</dt>
@@ -216,6 +225,9 @@ webpage that you maintain.
   favicon is a favorites icon, which is intended to appear in the address
   bar of your browser when you browse to the given page.
   <a href="https://raw.githubusercontent.com/mernst/plume-lib/master/bin/add-favicon">Documentation</a> at top of file.
+  <p>
+  Do not use the script from here; use the version in
+  <a href="https://github.com/plume-lib/html-tools">https://github.com/plume-lib/html-tools</a>.
 </dd>
 </dl>
 
@@ -352,6 +364,9 @@ Eliminates empty entries from <tt>cvs log</tt> output.
   The former variety (which is generated, for example, by the Hevea
   program) is brittle, as it may change from run to run of Hevea.
   <a href="https://raw.githubusercontent.com/mernst/plume-lib/master/bin/hevea-retarget-crossrefs">Documentation</a> at top of file.
+  <p>
+  Do not use the script from here; use the version in
+  <a href="https://github.com/plume-lib/html-tools">https://github.com/plume-lib/html-tools</a>.
 </dd>
 
 <dt>pdfinterleave</dt>
