@@ -1,6 +1,8 @@
 test:
-	${MAKE} -C checklink-persistent-errors-test test
+# checklink has moved to https://github.com/plume-lib/checklink .
+# 	${MAKE} -C checklink-persistent-errors-test test
 	${MAKE} -C lines-test test
+# html-update-link-dates has moved to https://github.com/plume-lib/html-tools .
 # html-update-link-dates-test is not automated.
 # I could use libfaketime; see
 # https://www.linux.com/news/changing-what-time-process-thinks-it-libfaketime
