@@ -10,6 +10,11 @@ plume-lib 1.3.0, released ???
 Deprecated Options and its supporting classes.  They have been moved to
 https://github.com/plume-lib/options .
 
+Deprecated HTML manipulation scripts:  add-favicon,
+hevea-add-verbatim-linenos, hevea-retarget-crossrefs, html-add-favicon,
+html-canonical-urls, html-toc, html-update-link-dates, and html-update-toc.
+They have moved to https://github.com/plume-lib/html-tools .
+
 ===========================================================================
 
 plume-lib 1.2.0, released February 1, 2018
